Water Watcher Plasmoid ChangeLog

 ----------------------------------
 0.2.1 : plasma-applet-waterwatcher

 * Add UI: the configuration tab remembers recent sources (last ten) and allows
           switching between them with the up / down keys.

 ----------------------------------
 0.2.0 : plasma-applet-waterwatcher

 * Add UI: a "configuration" tab that allows changing the data source and
           viewing errors when the engine rejects a data source.
 * Add UI: a "recent value" tab that displays additional information and
           allows switching between data series with the mouse or arrow keys.
 * Add UI: a tabbed dialog that is toggled on single click on the plasmoid.
 * Mod UI: switching between data series now done with long click on plasmoid. 
 * Mod UI: improved error reporting; major refactoring of UI into components.
 * BugFix: displays all values in a series instead of only first set.
 * Engine: now requires plasma-dataengine-wateriv-0.2.0.
   
 ----------------------------------
 0.1.0 : plasma-applet-waterwatcher

 * Basic configuration provided by plasmoid settings dialog.
 * UI allows switching between returned values with single click.
 * Initial release: a basic plasmoid that displays the most recent value.